logstash (1.4.2-5~ui60) unitix-60; urgency=low

  * Updated internal elasticsearch to 1.3.4
  * Updated integrated jruby to 1.7.16
  * Updated integrated kibana to 3.1.1

 -- Andreas Wirooks <andreas.wirooks@1und1.de>  Fri, 17 Oct 2014 14:39:15 +0200

logstash (1.4.2-4~ui60) unitix-60; urgency=low

  * Updated internal elasticsearch to 1.3.2
  * Updated integrated jruby to 1.7.14

 -- Andreas Wirooks <andreas.wirooks@1und1.de>  Mon, 01 Sep 2014 15:17:04 +0200

logstash (1.4.2-3~ui60) unitix-60; urgency=low

  * Updated internal elasticsearch to 1.3.1

 -- Andreas Wirooks <andreas.wirooks@1und1.de>  Wed, 30 Jul 2014 11:13:44 +0200

logstash (1.4.2-2~ui60) unitix-60; urgency=low

  * Updated internal elasticsearch to 1.2.2

 -- Andreas Wirooks <andreas.wirooks@1und1.de>  Mon, 14 Jul 2014 09:58:25 +0200

logstash (1.4.2-1~ui60) unitix-60; urgency=low

  * Updated to 1.4.2
  * Updated integrated jruby to 1.7.13
  * Skipped executing tests as a workaround for pbuilder because the UTF8 fix
    in the gemfile does not help fixing the tests

 -- Andreas Wirooks <andreas.wirooks@1und1.de>  Wed, 02 Jul 2014 09:21:41 +0200

logstash (1.4.1-1) wheezy; urgency=low

  * Updated to 1.4.1 which has no flat jar anymore with a lot of changes
  * Deleted all old patches and started a bunch of new ones because of changes
  * Updated integrated elastic search to 1.2.1
  * Updated integrated kibana to 3.1.0
  * Updated integrated jruby to 1.7.12
  * Updated integrated collectd to 4.5.1
  * WARNING: Does not work with pbuilder yet

 -- Andreas Wirooks <andreas.wirooks@1und1.de>  Wed, 04 Jun 2014 10:36:01 +0200

logstash (1.4.0.beta1-2) wheezy; urgency=low

  * Added missing path patch for opt
  * Removed /var/run/logstash creation
  * Updated integrated elasticsearch to 1.0.1

 -- Andreas Wirooks <andreas.wirooks@1und1.de>  Wed, 26 Feb 2014 11:44:03 +0100

logstash (1.4.0.beta1-1) wheezy; urgency=low

  * Updated to logstash 1.4.0.beta1
  * Refreshed all patches
