@@ -6,8 +6,8 @@
  #
 -JRUBY_VERSION=1.7.11
 -ELASTICSEARCH_VERSION=1.1.1
-+JRUBY_VERSION=1.7.16
-+ELASTICSEARCH_VERSION=1.3.4
++JRUBY_VERSION=1.7.16.1
++ELASTICSEARCH_VERSION=1.4.0
  
  WITH_JRUBY=java -jar $(shell pwd)/$(JRUBY) -S
  JRUBY=vendor/jar/jruby-complete-$(JRUBY_VERSION).jar
@@ -23,7 +23,7 @@
  GEOIP_ASN=vendor/geoip/GeoIPASNum.dat
  GEOIP_ASN_URL=http://logstash.objects.dreamhost.com/maxmind/GeoIPASNum-2014-02-12.dat.gz
 -KIBANA_URL=https://download.elasticsearch.org/kibana/kibana/kibana-3.0.1.tar.gz
-+KIBANA_URL=https://download.elasticsearch.org/kibana/kibana/kibana-3.1.1.tar.gz
++KIBANA_URL=https://download.elasticsearch.org/kibana/kibana/kibana-3.1.2.tar.gz
  PLUGIN_FILES=$(shell find lib -type f| egrep '^lib/logstash/(inputs|outputs|filters|codecs)/[^/]+$$' | egrep -v '/(base|threadable).rb$$|/inputs/ganglia/')
  QUIET=@
  ifeq (@,$(QUIET))
