@@ -1,3 +1,11 @@
+logstash (1.4.2-6~ui60) unitix-60; urgency=low
+
+  * Updated internal elasticsearch to 1.4.0
+  * Updated integrated jruby to 1.7.16.1
+  * Updated integrated kibana to 3.1.2
+
+ -- Andreas Wirooks <andreas.wirooks@1und1.de>  Wed, 12 Nov 2014 10:47:22 +0100
+
 logstash (1.4.2-5~ui60) unitix-60; urgency=low
 
   * Updated internal elasticsearch to 1.3.4
